<resources>
    <string name="app_name">KColor Weather</string>
    <string name="no_data">No Data</string>
    <string name="localization">Alcatraz, California</string>
    <string name="temp_placeholder">%d C</string>
    <string name="precip_placeholder">%d %%</string>
    <string name="temp">TEMP</string>
    <string name="precip">PRECIP</string>
    <string name="btn_daily_txt">DAILY WEATHER</string>
    <string name="btn_hourly_txt">HOURLY WEATHER</string>
    <string name="weather_android_string_fingerprint_icon_content_description">weather @android:string/fingerprint_icon_content_description</string>

    <string name="language">en</string>
    <string name="units">si</string>

    <string name="network_error">NETWORK ERROR</string>
    <string name="retry">RETRY?</string>
    <string name="daily_weather">Daily Weather</string>
    <string name="summary_of_the_week">Summary of the week</string>
    <string name="hourly_weather">Hourly Weather</string>
    <string name="summary_of_the_day">Summary of the Day</string>

</resources>
